objects/Programme_Module__c.object
<CustomObject><fields>
        <fullName>Assessments_Count__c</fullName>
        <formula>Module__r.Assessments_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Taken from Module level</inlineHelpText>
        <label>Assessments Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Audit_Check__c</fullName>
        <formula>If ( ISBLANK (Programme__r.Audit_Log__c ), 
   If ( ISBLANK ( Module__r.Audit_Log__c  ), 
      "None", 
      "Mod Only"),
   If ( ISBLANK ( Module__r.Audit_Log__c  ), 
      "Prog Only", 
      "Prog &amp; Mod")
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Check field for Audit Logs - Prog indicated available Audit Log on Programme record</inlineHelpText>
        <label>Audit Check</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Member_Type__c</fullName>
        <inlineHelpText>Whether Module is Required, Optional or Alternative; Solus is used to denote where a Programme only had a single Module.</inlineHelpText>
        <label>Member Type</label>
        <picklist>
            <picklistValues>
                <fullName>Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specials</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Module_Credits__c</fullName>
        <formula>Module__r.Credits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Always taken from Module level</inlineHelpText>
        <label>Module Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Module_Reference__c</fullName>
        <formula>Module__r.Module_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module Reference</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>To find correct Module type first the few character of Module title then click magnifying glass for available options</inlineHelpText>
        <label>Module</label>
        <referenceTo>Module__c</referenceTo>
        <relationshipLabel>Assigned Programmes</relationshipLabel>
        <relationshipName>Programme_Modules</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Places_Taken__c</fullName>
        <description>Number of students allocated to Module</description>
        <inlineHelpText>Count of Students taking this module (via count of Student Modules)</inlineHelpText>
        <label>Places Taken</label>
        <summaryForeignKey>Student_Module__c.Programme_Module__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Programme_Credits__c</fullName>
        <description>POTENTIALLY HIDE ON PAGE LAYOUT</description>
        <formula>IF (  TEXT ( Programme__r.Programme_Type__c) = "MSc Programme", Module__r.Credits__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Programme has a Type of "MSc Programme" then then takes credit from Module level, else gives zero</inlineHelpText>
        <label>Programme Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Programme_Type__c</fullName>
        <formula>Programme__r.Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Taken from Programme level</inlineHelpText>
        <label>Programme Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Programme__c</fullName>
        <description>Via Master-Detail relationship, no reparenting allowed</description>
        <label>Programme</label>
        <referenceTo>Programme__c</referenceTo>
        <relationshipLabel>Assigned Modules</relationshipLabel>
        <relationshipName>Programme_Modules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Test_Class_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Class Record</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Trigger_Student_Assessments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Student Assessments</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Many to many object, to allow one Module (instance) to be a member of multiple Programmes (instances)</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Programme Module</label><nameField>
        <displayFormat>PMI-{00000000}</displayFormat>
        <label>Programme Module</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Programme Modules</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>